# cpp-php-parser

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testing.php  testing.phpj  timer.cpp  timer.h
AST/: ASTNode.h  ClassDeclaration.cpp  ClassDeclaration.h  FunctionDeclaration.cpp  FunctionDeclaration.h  NamespaceDeclaration.cpp  NamespaceDeclaration.h  PropertyDeclaration.cpp  PropertyDeclaration.h  Script.cpp  Script.h  UseNamespaceDeclaration.cpp  UseNamespaceDeclaration.h
FileSystem/: Manager.cpp  Manager.h
Lexer/: Lexer.cpp  Lexer.h  NewLexer.cpp  NewLexer.h  Token.cpp  Token.h  TokenType.h
Lexer/Token/: TokenType.cpp  TokenType.h  TokenTypeMixin.cpp  TokenTypeMixin.h  generate_tokens.js  types.json
Parser/: NewParser.cpp  NewParser.h  Parser.cpp  Parser.h
Parser/AST/: ASTNode.cpp  ASTNode.h  Attribute.cpp  Attribute.h  BaseObjectDeclaration.cpp  BaseObjectDeclaration.h  ClassDeclaration.cpp  ClassDeclaration.h  Expression.cpp  Expression.h  FullyQualifiedTypeName.cpp  FullyQualifiedTypeName.h  FunctionDeclaration.cpp  FunctionDeclaration.h  InterfaceDeclaration.cpp  InterfaceDeclaration.h  NamespaceDeclaration.cpp  NamespaceDeclaration.h  Parameter.cpp  Parameter.h  PropertyDeclaration.cpp  PropertyDeclaration.h  Script.h  Statement.cpp  Statement.h  UseNamespaceDeclaration.cpp  UseNamespaceDeclaration.h
